Fix extra scrollbar

--- a/indigo_app/static/stylesheets/app.scss
+++ b/indigo_app/static/stylesheets/app.scss
@@ -108,7 +108,7 @@ html, body {
 .document-content-view {
   .document-sheet-container,
   .document-xml-editor {
-    height: 50%;
+    height: 49%;
   }
 
   .document-sheet-container {
